# daidala

./: .gitignore  AGENTS.md  README.md  __init__.py  lefthook.yml  plugin.yaml  pyproject.toml
.daidala/: constraints.yaml  project.yaml
.github/ISSUE_TEMPLATE/: daidala-self-improvement.yml
.github/workflows/: release.yml
assets/: AGENTS.md  README.md  build_brand_assets.py
daidala/: AGENTS.md  __init__.py  adapters.py  cancellation.py  cli.py  completion.py  constraints.py  controller.py  credentials.py  cycles.py  dashboard_backend.py  errors.py  evaluation.py  execution.py  increments.py  kanban.py  live_adapters.py  locations.py  packs.py  prerequisites.py  project_cycles.py  projects.py  recommendations.py  reconciliation.py  registrations.py  restricted_container.py  schemas.py  service.py  skills.py  state.py  store.py  tools.py  workflow.py
daidala/packs/: addyosmani.yaml  aidlc.yaml
dashboard/: AGENTS.md  __init__.py  manifest.json  plugin_api.py
docs/: 00-getting-started.md  01-architecture.md  02-workflow-state.md  03-pack-reference.md  04-authoring-packs.md  05-lifecycle-stages.md  06-security.md  07-runbook.md  08-hermes-integration.md  09-pack-adapters.md  10-autonomous-development-use-cases.md  11-skill-usage-and-user-control.md  12-market-overview.md  13-autonomous-triggering.md  14-workflow-constraints.md  15-self-improvement.md  16-self-improvement-setup.md  AGENTS.md  README.md
scripts/: AGENTS.md  check_md_links.py  check_release_contents.py  probe_hermes_compatibility.py  probe_hermes_dashboard_compatibility.py  probe_hermes_plugin_compatibility.py  run_hermes_support_matrix.py
tests/: AGENTS.md  conftest.py  test_adapters.py  test_cancellation.py  test_check_md_links.py  test_cli.py  test_completion.py  test_constraints.py  test_controller.py  test_credentials.py  test_cycles.py  test_dashboard_api.py  test_dashboard_assets.py  test_evaluation.py  test_execution.py  test_hermes_compatibility_probe.py  test_hermes_dashboard_compatibility_probe.py  test_hermes_plugin_compatibility_probe.py  test_hermes_support_matrix.py  test_increments.py  test_installation.py  test_kanban.py  test_live_adapters.py  test_packs.py  test_plugin.py  test_prerequisites.py  test_project_cycles.py  test_projects.py  test_recommendations.py  test_reconciliation.py  test_registrations.py  test_release_contents.py  test_release_workflow.py  test_restricted_container.py  test_self_improvement_loop.py  test_setup_skill_contract.py  test_setup_wizard.py  test_skill_installation.py  test_skills.py  test_store.py  (+3 more)
wingstaff/: AGENTS.md  __init__.py  cli.py  constraints.py  dashboard_backend.py  errors.py  execution.py  kanban.py  locations.py  packs.py  schemas.py  service.py  setup_wizard.py  skills.py  state.py  store.py  tools.py  workflow.py
(+41 files in other folders)
