[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daidala"
version = "0.2.0"
description = "Hermes-native AI workshop for approval-gated software-development workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Raphael Bossek", email = "raphael.bossek@videoclinic.de"}]
dependencies = ["PyYAML>=6.0"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "fonttools>=4.0",
  "lefthook>=2.1,<3",
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.0",
]

[project.scripts]
daidala = "daidala.cli:main"

[project.entry-points."hermes_agent.plugins"]
daidala = "daidala"

[tool.setuptools.packages.find]
include = ["daidala*", "dashboard*"]

[tool.setuptools.package-data]
daidala = ["packs/*.yaml", "skills/*/SKILL.md", "skills/*/references/*"]
dashboard = ["manifest.json", "dist/index.js", "dist/style.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
